# FractalSync

./: .flake8  .gitignore  BOUNDARY_CROSSING_SUMMARY.md  Cargo.toml  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  ORBIT_SYNTHESIZER_IMPLEMENTATION.md  QUICKSTART.md  QUICKSTART_TESTING.md  README.md  README_ORBIT_IMPLEMENTATION.md  build-all.ps1  build-all.sh  build-runtime-core.ps1  build_runtime_core.py  debug_rust_extractor.py  diagnostic.py  mypy.ini  parse_console_log.py  pyrightconfig.json  test_e2e.py  test_feature_parity.py  test_integration.py  verify_installation.py  verify_runtime_core.py
.github/: copilot-instructions.md
.github/workflows/: ci-type-checks.yml  ci.yml  e2e.yml  frontend-smoke.yml  playwright-e2e.yml  pytest.yml  quality_gates.yml
backend/: .gitignore  collect_supervised_data.py  conftest.py  model_utils.py  pyproject.toml  pyrightconfig.json  reexport.py  requirements-dev.txt  requirements.txt  test_curriculum_coverage.py  train.py  train_orbit.py  train_physics.py  visualize_curriculum.py  watch_curriculum.py
backend/api/: server.py
backend/data/: mandelbrot_distance_field.json
backend/docs/: ADVANCED_LOSSES.md  BOUNDARY_CROSSING.md  EMOTIONAL_COHERENCE.md  LOBE_TRANSMISSION.md  PHYSICS_MODEL.md  PLAN.md  SONG_ANALYZER_ORBIT_ENGINE.md  TODO.md  orbit_architecture.md
backend/examples/: analyzer_orbit_demo.py  benchmark_rendering.py  live_controller_demo.py  loss_components_demo.py  mixed_dataset_demo.py  physics_demo.py  velocity_smoothing_example.py
backend/scripts/: analyze_tune_results.py  compute_contract_hash.py  generate_surrogate_data.py  remove_epoch1_models.py  train_surrogate.py  tune_contour.py  validate_surrogate.py
backend/src/: audio_features.py  contour_controller.py  control_model.py  control_trainer.py  data_loader.py  differentiable_integrator.py  distance_field_loader.py  export_model.py  flight_recorder.py  height_field.py  julia_gpu.py  live_controller.py  lobe_state.py  loss_components.py  mandelbrot_distance_field.py  mandelbrot_orbits.py  model.py  model_contract.py  normalization.py  orbit_engine.py  orbit_synth.py  parity_trace.py  physics_model.py  physics_trainer.py  policy_interface.py  python_feature_extractor.py  runtime_core_bridge.py  runtime_inference.py  section_detector.py  shaders.py  show_config.py  song_analyzer.py  trainer.py  velocity_predictor.py  visual_losses.py  visual_metrics.py  visual_proxy.py  visual_surrogate.py
backend/stubs/: runtime_core.pyi
backend/tests/: TEST_FEATURE_PARITY.md  test_acceptance.ps1  test_api_telemetry.py  test_audio_driven_momentum.py  test_audio_pipeline.py  test_contour_integration.py  test_contour_integrator.py  test_contour_parity.py  test_contract_json.py  test_contract_version.py  test_correlation_loss_stability.py  test_data_loader.py  test_differentiable_integrator.py  test_distance_field_gradient.py  test_e2e.py  test_export_dynamo_fallback.py  test_export_dynamo_params.py  test_export_policy_metadata.py  test_feature_extractor_bridge.py  test_feature_parity.py  test_flight_recorder.py  test_flight_recorder_api.py  test_gpu_julia_fixedN_normals.py  test_inference_parity.py  test_integration.py  test_lobe_state.py  test_lobe_state_behavior.py  test_lobe_state_parity.py  test_loss_components.py  test_loudness_distance_grad_safe.py  test_loudness_distance_integration.py  test_mandelbrot_geometry.py  test_model_contract_metadata.py  (+40 more)
contracts/: model_io_contract.json  model_io_contract.schema.json
docs/: MODEL_IO_CONTRACT.md  NEW_README.md  PLAN.md  TESTING.md
frontend/: .gitignore  README.md  __onnx_worker_stub.js  index.html  package-lock.json  package.json  playwright-global-setup.cjs  playwright-global-setup.js  playwright-global-setup.ts  playwright-global-teardown.cjs  playwright-global-teardown.js  playwright.config.ts  vite.config.ts  vitest.config.ts  vitest.fast.config.ts
models/: .gitkeep
runtime-core/: .gitignore  Cargo.toml  py.typed  pyproject.toml  runtime_core.pyi
runtime-core/data/: README.md  mandelbrot_distance_1024.json
runtime-core/src/: clock.rs  controller.rs  controller_tests.rs  distance_field.rs  features.rs  features_test.rs  geometry.rs  height_controller.rs  lib.rs  lobe_state.rs  minimap.rs  pybindings.rs  step_controller.rs  visual_metrics.rs  wasm_bindings.rs
runtime-core/tests/: core_tests.rs  slow_clock_tests.rs  test_auto_load.rs  test_builtin_metadata_and_bailout.rs  test_controller.rs  test_distance_field.rs  test_features.rs  test_geometry.rs  test_height_controller.rs  test_height_field.rs  test_lobe_state.rs  test_stub_parity.rs
scripts/: README.md  benchmark_distance_field.py  build_distance_field.py  compute_contract_hash.py  dev_local.ps1  dev_local.sh  diag_parity.py  diag_parity_batch.py  eval_show_readiness.py  generate_frontend_model_contract.py  generate_model_contract_md.py  run-with-timeout.js  run_songformer_all_audio.ps1  test_build_distance_field.py  tmp_export_debug.py  update_contract_version.py  visualize_distance_field.py
wasm-orbit/: Cargo.toml  README.md
wasm-orbit/scripts/: smoke_node.mjs
wasm-orbit/src/: lib.rs
wasm-orbit/tests/: wasm_step_advanced.rs
(+79 files in other folders)
