[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "runtime_core"
version = "0.1.0"
description = "Shared runtime for audio-driven orbit synthesis"
requires-python = ">=3.8"
authors = [{name = "FractalSync Developers"}]
license = {text = "MIT"}

[tool.maturin]
features = ["python"]
include = ["py.typed", "runtime_core.pyi"]
